<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Movie Provider</string>
    <string name="movie_mode">Movies</string>
    <string name="tv_show_mode">Tv Shows</string>
    <string name="movie_list">Movie list</string>
    <string name="tv_show_list">Tv Show list</string>
    <string name="fav">Favourite</string>
    <string name="title_movie">Title</string>
    <string name="release">Release Date</string>
    <string name="overview">Overview</string>
    <string name="image_detail_movie">image detail movie</string>
    <string name="runtime">Runtime</string>
    <string name="last_air_date">Last Air Date</string>
    <string name="release_date">Release Date</string>
    <string name="title">Title</string>
    <string name="choose">You choose</string>
    <string name="backBtn">Back</string>
    <string name="mins">%s mins</string>
    <string name="success_add_fav">This Movie was successfully added to Favorite!</string>
    <string name="success_del_fav">This Movie was successfully deleted from Favorite!</string>
    <string name="info_fav_movie">Favourite Film not Found!</string>
    <string name="search">Search</string>
    <string name="search_hint">Search Title</string>
    <string name="search_result">Search Result</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

