<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backgroundPath"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/collapsing_toolbar"
    android:background="@color/colorPrimary"
    tools:context=".detail.DetailActivity"
    tools:showPaths="true">

    <ImageView
        android:id="@+id/bgDetailsMovie"
        android:layout_width="0dp"
        android:layout_height="310dp"
        android:contentDescription="@string/image_detail_movie"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@android:color/darker_gray" />

    <ImageView
        android:id="@+id/backBtnMovie"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:contentDescription="@string/backBtn"
        android:padding="16dp"
        android:src="@drawable/ic_arrow_back_white_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imgDetailsMovie"
        android:layout_width="165dp"
        android:layout_height="155dp"
        android:contentDescription="@string/image_detail_movie"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@id/bgDetailsMovie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvDetailTitleMovie"
        style="@style/TextSpec.Title"
        app:layout_constraintBottom_toBottomOf="@+id/imgDetailsMovie"
        app:layout_constraintEnd_toEndOf="@+id/imgDetailsMovie"
        app:layout_constraintStart_toStartOf="@+id/imgDetailsMovie"
        tools:text="Title" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDetailTitleMovie">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@+id/scrollView">

            <TextView
                android:id="@+id/detail_releaseDate"
                style="@style/TextSpec.Field"
                android:text="@string/release_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Release Date" />
            <TextView
                android:id="@+id/tvDetailReleaseMovie"
                style="@style/TextSpec.Value"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_releaseDate"
                tools:text="Release Date" />

            <TextView
                android:id="@+id/runtime"
                style="@style/TextSpec.Field"
                android:text="@string/runtime"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDetailReleaseMovie"
                tools:text="Runtime" />

            <TextView
                android:id="@+id/tvDetailRuntimeMovie"
                style="@style/TextSpec.Value"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/runtime"
                tools:text="Runtime" />

            <TextView
                android:id="@+id/overview"
                android:text="@string/overview"
                style="@style/TextSpec.Field"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDetailRuntimeMovie"
                tools:text="Overview" />

            <TextView
                android:id="@+id/tvDetailOverviewMovie"
                style="@style/TextSpec.Value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/overview"
                tools:text="Overview" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.motion.widget.MotionLayout>